    bad formatted addresses.
  - Modified conf.pl: default to force usernames lowercase for servers which
    are case-insensitive
  - Applied bugfixes from stable to htmlfilter code.
  - Fix bug #722933 where resuming a draft message would lose the reference headers
  - Removed hard coded colors from login.php and made it use the default theme and css file

**************************************
*** SquirrelMail Stable Series 1.4 ***
**************************************

Version 1.4.0 -- 3 April 2003
-----------------------------
  - Fixed mail_fetch plugin. Now folder edition defaults to actual value.
    All settings from other servers are preserved when deleting one.
  - Added Vietnamese translation.
  - Fixed the newmail plugin.
  - Added RECENT response to sqimap_get_status.
  - Fixed attachment filename resolving.
  - Added check for X-Confirm-Reading-To to make MDN work for messages sent by Pine.
  - sqextractGlobalVar removed (use sqgetGlobalVar instead).
  - Subfolders of Sent and Drafts show To field instead of From
  - Updates in conf.pl to infamous delete_folder setting, including
    addition of appropriate default value for courier and UW.
  - Fix for date/time display in certain timezones.
  - Fix some features of login.php that are used by some plugins and was broken
    by register_globals = off.
  - Added Greek locale. Thanks to George P. Kremmydas 
    <george at kefalonia-ithaki.gr> and Alexandros Vellis <avel at noc.uoa.gr>
  - Added notes about PHP 4.3.x to documentation.
  - Fixed \Noselect mailbox detection.
  - Fixed charset decode of base64 encoded strings.
  - Fixed encoding of email addresses in our composed messages.
  - Fixed folder creation for Courier using Autoconfig options.
  - Fixed encoded string handling inside MDN notifications.
  - Fixed unfold header routine in imap_messages (for mailbox_display).
  - Fixed subject_line hook.
  - Fixed sqgetGlobalVar switching.
  - Fixed handling of encoding/decoding strings.